--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ vertical-align:middle;
 }
 #search-result {
     width:fit-content;
-    min-width: 50%;
-    max-width: 80%;
+    min-width: 1000px;
+    max-width: 1500px;
     min-height: 750px;
     margin-left: auto;
     margin-right: auto;
@@ -139,21 +139,28 @@ vertical-align:middle;
     font-size: 30px;
     margin-left: 20px;
 }
+.package-subtitle {
+    display: inline;
+}
 .package-desc {
     margin-left: 20px;
     margin-right: 20px;
     font-family: 'Poppins';
     white-space: break-spaces;
+    display: block;
 }
 .package-thumb {
     border-radius: 20px;
     margin-left: 50px;
 }
 .package-author {
-    float: right;
     margin-top: 100px;
+    margin-left: 20px;
     background: rgba(0,0,0,0.5);
-    width: 350px;
+    min-width: 350px;
+    max-width: fit-content;
+    border-radius: 5px;
+    padding: 20px;
 }
 .package-stats {
     margin:auto;
@@ -184,6 +191,7 @@ vertical-align:middle;
     float:  right;
     margin-right: 10px;
     margin-top: 20px;
+    position: relative;
 }
 .tag {
     background-color: rgb(17, 138, 138);
@@ -193,4 +201,7 @@ vertical-align:middle;
     font-family: 'Poppins';
     text-align: center;
     margin-bottom: 10px;
+}
+.hyper {
+    color:lightskyblue;
 }
