--- a/style.css
+++ b/style.css
@@ -205,3 +205,27 @@ vertical-align:middle;
 .hyper {
     color:lightskyblue;
 }
+#error-loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: maroon;
+    position: fixed;
+    z-index: 2;
+    overflow-y: hidden;
+    display: none;
+}
+.error-text {
+    font-family: 'Poppins';
+    position: sticky;
+    display: table;
+    margin: auto;
+}
+.error-title {
+text-align: center;
+font-size: 100px;
+}
+.error-body {
+    font-size: 50px;
+    text-align: center;
+}
