--- a/style.css
+++ b/style.css
@@ -37,41 +37,28 @@ a {
     padding: 0px;
     font-size: 3em;
     text-align: left;
+    height: 80px;
     background-color: rgba(0, 0, 0, 0.2);
     font-family: 'Poppins';
+    backdrop-filter: blur(10px)
 }
 .header-title {
     margin-left: 10px;
 }
 .header-logo {
 width: 75px;
-height: 75px;
+height: inherit;
 vertical-align:middle;
 }
-.search-controls {
-    display: inline;
-    padding: 3px;
+.header-toolcontainer {
+    display: inline-grid;
+    align-items: center;
+    font-size: 25px;
     float: right;
-    background-color: rgba(0, 0, 0, 0.2);
-}
-.search-bar {
-    background-color: rgba(115, 104, 179, 0.2);
-    border: none;
-    border-radius: 15px;
-    height: 30px;
-    color: white;
-    font-family: 'Poppins';
-}
-.search-bar:focus {
-    outline: none;
-}
-.search-button {
-    width: 25px;
-    height: 25px;
-    background: url(./images/search.png);
-    background-size:cover;
-    border: none;
-    display: inline;
+    margin-top: 20px;
+    margin-right: 10px;
+    justify-content: end;
+    justify-items: stretch;
 }
 #content {
     display: flex;
@@ -227,5 +214,40 @@ font-size: 100px;
 }
 .error-body {
     font-size: 50px;
+    text-align: center;
+}
+.credits-content {
+    margin:auto;
+    min-width: 500px;
+    max-width: 1500px;
+    width: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    min-height: fit-content;
+    border-radius: 15px;
+    backdrop-filter: blur(10px)
+}
+.credits-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.credit-box {
+    background-color: rgba(0, 0, 0, 0.4);
+    min-width: 450px;
+    max-width: 1450px;
+    width: 50%;
+    min-height: 150px;
+    max-height: 550px;
+    height: 15%;
+    margin-bottom: 15px;
+    padding: 20px;
+    border-radius: 5px;
+}
+.contributions {
+    color: gray;
+    font-family: 'Poppins';
+    font-size: 15px;
     text-align: center;
 }
