--- a/style.css
+++ b/style.css
@@ -251,3 +251,24 @@ font-size: 100px;
     font-size: 15px;
     text-align: center;
 }
+#share-selection {
+    opacity: 0;
+    width: 0;
+    height: 0;
+    margin: 0;
+}
+#share-button {
+    width: inherit;
+    height: inherit;
+    border: none;
+    display: inline;
+    filter: invert(1);
+    background: url(./images/share.png);
+    background-size: cover;
+    padding: 5px;
+}
+.share-container {
+    display: inline;
+    width: 50px;
+    height: 45px;
+}
