--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ height: inherit;
 vertical-align:middle;
 }
 .header-toolcontainer {
-    display: inline-grid;
+    display: flex;
     align-items: center;
     font-size: 25px;
     float: right;
@@ -60,6 +60,31 @@ vertical-align:middle;
     justify-content: end;
     justify-items: stretch;
 }
+#search-bar {
+    border: none;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    border-radius: 7px;
+    border: #313c55 solid 3px;
+    padding: 5px;
+    width: 150px;
+    height: 25px;
+    font-family: 'Poppins';
+    margin-right: 15px;
+}
+#search-bar:focus {
+    outline: none;
+}
+#search-button {
+    width: 25px;
+    height: 25px;
+    padding: 5px;
+    background: url(./images/search.png);
+    background-size: cover;
+    border: none;
+    position: absolute;
+    margin-left: 125px;
+}
 #content {
     display: flex;
     margin-top: 20px;
@@ -67,6 +92,17 @@ vertical-align:middle;
     overflow-y: hidden;
     flex-wrap: wrap;
     justify-content: center;
+    background-size:cover;
+}
+.no-results {
+    height: 500px;
+    width: 750px;
+    backdrop-filter: blur(3px);
+    background:rgba(0, 0, 0, 0.5);
+    margin: auto;
+    font-family: 'Poppins';
+    font-size: 3em;
+    text-align: center;
 }
 .tile {
     margin-left: 10px;
@@ -139,6 +175,7 @@ vertical-align:middle;
 .package-thumb {
     border-radius: 20px;
     margin-left: 50px;
+    width: 512px;
 }
 .package-author {
     margin-top: 100px;
@@ -256,6 +293,7 @@ font-size: 100px;
     width: 0;
     height: 0;
     margin: 0;
+    padding: 0;
 }
 #share-button {
     width: inherit;
